@@ -30,6 +30,7 @@ ADD(DIR,					"DIR")
 ADD(DISMOUNT,				"DISMOUNT")
 ADD(DISPIDDEC,				"DISPIDDEC")
 ADD(EMOTEACT,				"EMOTEACT")
+ADD(EMOTECOLOR,				"EMOTECOLOR")
 ADD(EXP,					"EXP")
 ADD(FAME,					"FAME")
 ADD(FASTERCASTING,			"FASTERCASTING")
